--- a/server/views/faculties/details.ejs
+++ b/server/views/faculties/details.ejs
@@ -5,16 +5,16 @@
   <div class="row">
     <div class="col-md-offset-3 col-md-6">
       <h1><%= title %></h1>
-      <form class="form" method="post">
+      <form class="form" method="POST">
         <div class="form-group">
           <label for="IdTextField">Faculty ID</label>
           <input
-            type="text"
+            type="number"
             class="form-control"
             id="IdTextField"
             placeholder="Faculty Id"
             name="Facultyid"
-            value="<%= faculties.Facultyid %>"
+            value="<%= faculty.Facultyid %>"
             required
           />
         </div>
@@ -27,7 +27,7 @@
             id="NameTextField"
             placeholder="Faculty Name"
             name="Facultyname"
-            value="<%= faculties.Facultyname %>"
+            value="<%= faculty.Facultyname %>"
             required
           />
         </div>
@@ -37,10 +37,10 @@
           <input
             type="text"
             class="form-control"
-            id="AuthorDeptTextField"
+            id="DeptTextField"
             placeholder="Department"
             name="Department"
-            value="<%= faculties.Department %>"
+            value="<%= faculty.Department %>"
             required
           />
         </div>
@@ -53,17 +53,16 @@
             id="SubTextField"
             placeholder="Subject"
             name="Subject"
-            value="<%= faculties.Subject %>"
+            value="<%= faculty.Subject %>"
             required
           />
         </div>
 
-        <button type="submit" class="btn btn-primary">
-          <i class="fa fa-check-square-o"></i> Submit
+        <button class="btn btn-primary" type="submit">
+          <i class="fa fa-edit"></i> Submit
         </button>
-        <a href="/faculties" class="btn btn-warning"
-          ><i class="fa fa-undo"></i> Cancel</a
-        >
+        <a href="/faculties" class="btn btn-warning">
+          <i class="fa fa-undo"></i> Cancel</a>
       </form>
     </div>
   </div>
