--- a/server/views/faculties/index.ejs
+++ b/server/views/faculties/index.ejs
@@ -5,14 +5,9 @@
   <div class="row">
     <div class="col-md-offset-1 col-md-10">
       <h3>Faculty Information</h3>
-      <!-- ------------------------ -->
-      <!-- FIX THE ADD BUTTON BELOW -->
-      <!-- ------------------------ -->
-      <a href="" class="btn btn-primary"
-        ><i class="fa fa-plus"></i> Add a faculty</a
-      >
-
-      <br />
+      <a href="/faculties/add" class="btn btn-primary" role="button">  
+       <i class="fas fa-plus-circle"></i> Add a faculty</a>
+      <br>
       <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover">
           <thead>
@@ -26,31 +21,25 @@
           </thead>
           <tbody>
             <!-- Template Row -->
-            <% for (let count = 0; count < faculties.length; count++) { %>
+            <% for(let count=0; count<faculties.length; count++) { %>
             <tr>
-              <td><%= faculties[count].Facultyid %></td>
+              <td class="text-center"><%= faculties[count].Facultyid %></td>
               <td class="text-center"><%= faculties[count].Facultyname %></td>
               <td class="text-center"><%= faculties[count].Department %></td>
               <td class="text-center"><%= faculties[count].Subject %></td>
-
               <td class="text-center">
-                <!-- ------------------------ -->
-                <!-- ADD the EDIT BUTTON HERE -->
-                <!-- ------------------------ -->
+                <a href="/faculties/details/<%=faculties[count]._id %>" class = "btn btn-primary btn-sm"> 
+              <i class="fas fa-pencil-alt"></i> EDIT </a>
               </td>
+              <td class="text-center">
+                <a href= "/faculties/delete/<%=faculties[count]._id %>" class="btn btn-warning btn-sm">
+                  <i class="fas fa-trash-alt"></i> Delete</a>
+            </td>  
             </tr>
-            <% } %>
-          </tbody>
-        </table>
-      </div>
-      <!-- ------------------------ -->
-      <!-- ADD the EDIT BUTTON HERE -->
-      <!-- ------------------------ -->
-      
-      <a href="" class="btn btn-warning btn-sm">
-        <i class="fas fa-trash"></i> Delete</a>
+            <% } %> 
+       </tbody> 
+      </table>
     </main>
-
       <div class="col-md-offset-1 col-md-10 text-center">
         <ul class="pagination pagination-lg pager" id="myPager"></ul>
       </div>
