--- a/server/views/faculties/index.ejs
+++ b/server/views/faculties/index.ejs
@@ -6,7 +6,7 @@
     <div class="col-md-offset-1 col-md-10">
       <h3>Faculty Information</h3>
       <a href="/faculties/add" class="btn btn-primary" role="button">  
-       <i class="fas fa-plus-circle"></i> Add a faculty</a>
+       <i class="fa fa-plus-circle"></i> Add a faculty</a>
       <br>
       <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover">
@@ -29,11 +29,11 @@
               <td class="text-center"><%= faculties[count].Subject %></td>
               <td class="text-center">
                 <a href="/faculties/details/<%=faculties[count]._id %>" class = "btn btn-primary btn-sm"> 
-              <i class="fas fa-pencil-alt"></i> EDIT </a>
+              <i class="fa fa-pencil"></i> EDIT </a>
               </td>
               <td class="text-center">
                 <a href= "/faculties/delete/<%=faculties[count]._id %>" class="btn btn-warning btn-sm">
-                  <i class="fas fa-trash-alt"></i> Delete</a>
+                  <i class="fa fa-trash"></i> Delete</a>
             </td>  
             </tr>
             <% } %> 
