--- a/client/Content/app.css
+++ b/client/Content/app.css
@@ -1,11 +1,4 @@
 /* Custom CSS goes here */
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
-
-
+  padding-bottom: 70px;
+  }
