--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="/Scripts/lib/font-awesome/css/font-awesome.min.css"
     /> 
-    <link rel="stylesheet" href="/Content/app.css" type="text/css"/>
+    <link rel="stylesheet" href="/Content/app.css" />
   </head>
   <body>
     <nav class="navbar navbar-inverse" role="navigation">
